* Hermes wiki now spelled HermesWiki * fixed height bug in left menu and page display * still to come: userbox dont jumping around when logged in or not * supported browser should be FF, Chrome and IE

--- a/Research/KnowWE-Plugin-HermesModule/src/main/resources/webapp/templates/newhermesskin/jspwiki.css
+++ b/Research/KnowWE-Plugin-HermesModule/src/main/resources/webapp/templates/newhermesskin/jspwiki.css
@@ -113,8 +113,7 @@
 	margin-top:0em;
 	width:18%;
 	margin: auto; /* Div soll zentriert werden */
-	height: 500px;
-	max-height: 100%;
+	min-height: 500px;
 }
 #favorites .userbox {
 	border:1px solid #ddd;
@@ -158,7 +157,7 @@
 	border: 2px solid #385D8A;
 	margin: 0;
 	width:78%;
-	height: 100%;
+	min-height: 500px;
 	text-align:justify;
 	padding-left: 5px;
 	padding-right: 5px;
